packages/salesforcedx-vscode-soql/src/soql-builder-ui/modules/querybuilder/fields/fields.css
/*
 *  Copyright (c) 2020, salesforce.com, inc.
 *  All rights reserved.
 *  Licensed under the BSD 3-Clause license.
 *  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 *
 */

@import 'querybuilder/cssCommon';

select[multiple] {
  height: auto;
  max-height: 4em;
  padding: 3px;
}

.selected-fields-container {
  max-height: 10em;
  overflow-y: scroll;
}

.relationship-breadcrumb {
  font-size: smaller;
  color: var(--vscode-foreground);
}

.breadcrumb-back {
  margin-right: 0.375rem;
  color: var(--vscode-button-background);
}

.breadcrumb-back:hover {
  opacity: 0.75;
}

.breadcrumb-label {
  font-weight: bold;
}

.pills-gap {
  padding-top: 5px;
}

.relationship-pill-group {
  border: 1px solid var(--vscode-list-inactiveSelectionBackground, var(--soql-color-light-grey));
  border-radius: 3px;
  margin-top: 5px;
}

.relationship-pill-header {
  font-size: smaller;
  font-weight: bold;
}

